pick up added and Dj booth added not implemented

--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -131,7 +131,11 @@
     <ClCompile Include="Source\AISystem.cpp" />
     <ClCompile Include="Source\Button.cpp" />
     <ClCompile Include="Source\CollisionListener.cpp" />
+    <ClCompile Include="Source\DJBoothComponent.cpp" />
+    <ClCompile Include="Source\DJBoothSystem.cpp" />
     <ClCompile Include="Source\PickUp.cpp" />
+    <ClCompile Include="Source\PickUpComponent.cpp" />
+    <ClCompile Include="Source\PickUpSystem.cpp" />
     <ClCompile Include="Source\Platform.cpp" />
     <ClCompile Include="Source\AnimationSystem.cpp" />
     <ClCompile Include="Source\AnimationComponent.cpp" />
@@ -163,8 +167,12 @@
     <ClInclude Include="Header\CollisionListener.h" />
     <ClInclude Include="Header\Commands.h" />
     <ClInclude Include="Header\Component.h" />
+    <ClInclude Include="Header\DJboothComponent.h" />
+    <ClInclude Include="Header\DJBoothSystem.h" />
     <ClInclude Include="Header\Game.h" />
     <ClInclude Include="Header\Entity.h" />
+    <ClInclude Include="Header\PickUpComponent.h" />
+    <ClInclude Include="Header\PickUpSystem.h" />
     <ClInclude Include="Header\PlayerInputComponent.h" />
     <ClInclude Include="Header\PlayerInputSystem.h" />
     <ClInclude Include="Header\PlayerPhysicsComponent.h" />
