--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="Header\AttackSystem.h" />
     <ClInclude Include="Header\BehaviourTree.h" />
     <ClInclude Include="Header\Box2DBridge.h" />
+    <ClInclude Include="Header\ButtonComponent.h" />
     <ClInclude Include="Header\Camera.h" />
     <ClInclude Include="Header\ClientSocket.h" />
     <ClInclude Include="Header\Button.h" />
