Dust animation plays when players land

--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -177,6 +177,8 @@
     <ClInclude Include="Header\Component.h" />
     <ClInclude Include="Header\DJboothComponent.h" />
     <ClInclude Include="Header\DJBoothSystem.h" />
+    <ClInclude Include="Header\DustComponent.h" />
+    <ClInclude Include="Header\DustTriggerComponent.h" />
     <ClInclude Include="Header\Game.h" />
     <ClInclude Include="Header\Entity.h" />
     <ClInclude Include="Header\LobbyScene.h" />
