--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Source\Vector2f.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AiInputComponent.h" />
     <ClInclude Include="Header\Action.h" />
     <ClInclude Include="Header\AIComponent.h" />
     <ClInclude Include="Header\AISystem.h" />
