--- a/CyberPunch.vcxproj.filters
+++ b/CyberPunch.vcxproj.filters
@@ -147,10 +147,10 @@
     <ClCompile Include="Source\OnlineInputComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
-    <ClCompile Include="Header\LobbyScene.cpp">
+    <ClCompile Include="Source\LobbyScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Header\Camera.cpp">
+    <ClCompile Include="Source\Camera.cpp">
       <Filter>Source Files\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
@@ -317,7 +317,6 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Header\SlowBoothComponent.h">
-    </ClInclude>
       <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
