--- a/CyberPunch.vcxproj.filters
+++ b/CyberPunch.vcxproj.filters
@@ -309,6 +309,7 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Header\AiInputComponent.h">
+    <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Header\GravityBoothComponent.h">
       <Filter>Header Files\Components</Filter>
