Achievement screen started, placeholders for now

--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="Header\LobbyScene.cpp" />
     <ClCompile Include="Header\Camera.cpp" />
+    <ClCompile Include="Source\AchievementsScene.cpp" />
     <ClCompile Include="Source\ClientSocket.cpp" />
     <ClCompile Include="Source\AttackComponent.cpp" />
     <ClCompile Include="Source\AttackSystem.cpp" />
@@ -160,6 +161,8 @@
     <ClCompile Include="Source\Vector2f.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Header\AchievementComponent.h" />
+    <ClInclude Include="Header\AchievementsScene.h" />
     <ClInclude Include="Header\Action.h" />
     <ClInclude Include="Header\AIComponent.h" />
     <ClInclude Include="Header\AiInputComponent.h" />
